--- a/package.xml
+++ b/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="james@todo.todo">james</maintainer>
+  <maintainer email="jkuczyns@cs.uml.edu">James Kuczynski</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
