--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
-  <name>image_transport_inverse</name>
+  <name>ros_ip_transform</name>
   <version>0.0.0</version>
-  <description>The image_transport_inverse package</description>
+  <description>The ros_ip_transform package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but mutiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/image_transport_inverse</url> -->
+  <!-- <url type="website">http://wiki.ros.org/ros_ip_transform</url> -->
 
 
   <!-- Author tags are optional, mutiple are allowed, one per tag -->
