--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(ros_ip_transform)
 
+
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+set(CMAKE_AUTOMOC ON)
+
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
@@ -18,6 +22,10 @@ find_package(catkin REQUIRED COMPONENTS
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
+find_package(Qt5 5.5.0 REQUIRED COMPONENTS
+	QtCore QtWebSockets)
+include(${QT_USE_FILE})
+ADD_DEFINITIONS(${QT_DEFINITIONS})
 
 
 ## Uncomment this if the package has a setup.py. This macro ensures
@@ -179,6 +187,16 @@ target_link_libraries(RosClient ${catkin_LIBRARIES} ${OpenCV_LIBRARIES})
 add_executable(RosServer src/RosServer_main.cpp
                          src/RosServer.cpp)
 target_link_libraries(RosServer ${catkin_LIBRARIES} ${OpenCV_LIBRARIES})
+
+
+add_executable(RosClientWs src/RosClientWs_main.cpp
+                         src/RosClientWs.cpp)
+target_link_libraries(RosClientWs ${catkin_LIBRARIES} ${OpenCV_LIBRARIES} ${QT_LIBRARIES})
+
+add_executable(RosServerWs src/RosServerWs_main.cpp
+                         src/RosServerWs.cpp)
+target_link_libraries(RosServerWs ${catkin_LIBRARIES} ${OpenCV_LIBRARIES} ${QT_LIBRARIES})
+
 
 #Frankenscooter-project specific:
 add_executable(DataCom src/scooter_specific/DataCom_main.cpp
