modified program to be compatable with RosSkylab by added publisher

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
 
-find_package(Qt5 5.5.0 EXACT REQUIRED COMPONENTS Core Gui Widgets WebSockets)
+find_package(Qt5 5.5.1 EXACT REQUIRED COMPONENTS Core Gui Widgets WebSockets)
 #include(${QT_USE_FILE})
 add_definitions(${QT_DEFINITIONS})
 include_directories({QT_LIBRARY_DIRS})
@@ -205,6 +205,9 @@ target_link_libraries(rqt_chatterbot_003 ${catkin_LIBRARIES})
 
 add_executable(rqt_chatterbot_004 src/chatterbots/Chatterbot_004.cpp)
 target_link_libraries(rqt_chatterbot_004 ${catkin_LIBRARIES})
+
+add_executable(rqt_testbot src/chatterbots/Testbot.cpp)
+target_link_libraries(rqt_testbot ${catkin_LIBRARIES})
 
 
 
